--- a/scss/template/modular/_third_panel.scss
+++ b/scss/template/modular/_third_panel.scss
@@ -6,7 +6,7 @@
 	{
 		background-color: $gray !important;
 		position: relative;
-		padding: 6rem;
+		padding: 10rem;
 	}
 
 	h1
@@ -137,6 +137,7 @@
 		bottom: -170px;
 		right: 90px;
 		opacity: 0.5;
+		background-size: 100%;
 	}
 }
 
