--- a/templates/modular/first_panel.html.twig
+++ b/templates/modular/first_panel.html.twig
@@ -1,4 +1,4 @@
-<div class="header-boxes">
+{# <div class="header-boxes">
 	<div class="header-box first-box"></div>
 	<div class="header-box second-box"></div>
 </div>
@@ -10,5 +10,5 @@
 	    {% endif %}
 		{{ content }}
 	</div>
-</div>
+</div> #}
 <div class="down-carat"></div>
