--- a/css-compiled/nucleus.css
+++ b/css-compiled/nucleus.css
@@ -1,5 +1,7 @@
 .modular.header-image #header #navbar a {
   color: #000000 !important; }
+  .modular.header-image #header #navbar a:hover {
+    border-bottom: none !important; }
 
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
