--- a/css-compiled/template.css
+++ b/css-compiled/template.css
@@ -1,6 +1,8 @@
 @import url(//fonts.googleapis.com/css?family=Montserrat:400|Raleway:300,400,600|Inconsolata);
 .modular.header-image #header #navbar a {
   color: #000000 !important; }
+  .modular.header-image #header #navbar a:hover {
+    border-bottom: none !important; }
 
 @font-face {
   font-family: 'Didot-Regular';
@@ -960,16 +962,21 @@ ul.pagination {
   justify-content: center;
   align-items: center;
   width: 100%;
-  position: relative; }
+  position: relative;
+  background: url("../images/headerbg.png") no-repeat left center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw; }
   @media (max-width: 450px) {
     .cover {
       height: 50vh; } }
   .cover h1 {
-    font-size: 100pt;
+    font-size: 80pt;
     letter-spacing: initial;
-    margin-left: 2rem;
+    margin-left: 90px;
     min-width: 800px;
-    max-width: 100vw; }
+    max-width: 100vw;
+    margin-left: 38%; }
     @media (max-width: 450px) {
       .cover h1 {
         font-size: 30pt;
@@ -1000,7 +1007,7 @@ ul.pagination {
         font-weight: 700 !important;
         font-size: 1rem; } }
     .cover h3:first-of-type {
-      margin-left: 1rem;
+      margin-left: 3.5rem;
       margin-right: 1.5rem; }
       @media (max-width: 450px) {
         .cover h3:first-of-type {
@@ -1026,13 +1033,13 @@ ul.pagination {
     font-weight: 300; }
   .cover .header-box:first-of-type {
     background-color: #f9402c;
-    width: 340px; }
+    flex-grow: 1; }
     @media (max-width: 450px) {
       .cover .header-box:first-of-type {
         width: 130px; } }
   .cover .header-box:last-of-type {
     background-color: #fff;
-    flex-grow: 2.5; }
+    flex-grow: 1; }
 
 .details {
   display: flex;
@@ -1083,6 +1090,8 @@ ul.pagination {
       .services h1 {
         padding-right: 2rem;
         margin-bottom: 0; } }
+  .services .modular .modular-row:last-child {
+    margin-bottom: 0 !important; }
   .services .callout {
     padding: 0;
     padding-top: 6rem; }
@@ -1091,14 +1100,14 @@ ul.pagination {
         padding-top: 2rem; } }
   .services h2:first-of-type {
     text-align: right;
-    padding: 4rem 10rem 1rem 10rem; }
+    padding: 4rem 12rem 1rem 12rem; }
     @media (max-width: 450px) {
       .services h2:first-of-type {
         padding: 1rem 2rem;
         padding-top: 2rem;
         margin: 0; } }
   .services ul {
-    padding: 2rem 10rem 4rem 10rem; }
+    padding: 2rem 12rem 4rem 12rem; }
     @media (max-width: 450px) {
       .services ul {
         padding: 2rem !important;
@@ -1139,7 +1148,9 @@ ul.pagination {
   width: 100vw;
   color: #585758; }
   .services-callouts h4 {
-    text-align: center !important; }
+    text-align: center !important;
+    font-weight: 300;
+    margin-top: 4rem; }
   .services-callouts:after {
     display: block;
     content: '';
@@ -1159,7 +1170,7 @@ ul.pagination {
   .services-callout-panel h2 {
     font-size: 2rem;
     margin: 0 auto !important;
-    text-align: center !important;
+    text-align: right !important;
     width: 1000px; }
     @media (max-width: 450px) {
       .services-callout-panel h2 {
@@ -1183,13 +1194,18 @@ ul.pagination {
   .grav-lightslider li a:hover {
     background-color: #f9402c !important; }
   .grav-lightslider h1 {
-    font-weight: 300; }
+    font-weight: 300;
+    font-size: 16pt;
+    text-align: left; }
     @media (max-width: 450px) {
       .grav-lightslider h1 {
         font-size: 1.5rem !important; } }
   .grav-lightslider h1 strong, .grav-lightslider h1 label, .grav-lightslider h1 th {
     color: #f9402c !important;
     font-weight: 700; }
+
+.lSNext:hover, .lSPrev:hover {
+  border-bottom: none; }
 
 .lSAction > .lSNext {
   background-position: -35px 0 !important;
@@ -1262,7 +1278,7 @@ ul.pagination {
   .about li {
     margin-bottom: 1.5rem; }
   .about img {
-    max-width: 300px;
+    max-width: 150px;
     float: left;
     margin: 0 2rem 0 2rem; }
   .about a:hover {
@@ -1299,5 +1315,8 @@ section {
   padding-top: 0; }
   #body * {
     letter-spacing: initial !important; }
+
+a:hover {
+  border-bottom: 1px solid #f9402c; }
 
 /*# sourceMappingURL=template.css.map */
