--- a/scss/template/modular/_first_panel.scss
+++ b/scss/template/modular/_first_panel.scss
@@ -19,6 +19,10 @@
 	align-items: center;
 	width: 100%;
 	position: relative;
+	background: url('../images/headerbg.png') no-repeat left center;
+	background-size: cover;
+	height: 100vh;
+	width: 100vw;
 
 	@include respond-to('small')
 	{
@@ -27,11 +31,12 @@
 
 	h1
 	{
-		font-size: 100pt;
+		font-size: 80pt;
 		letter-spacing: initial;
-		margin-left: 2rem;
+		margin-left: 90px;
 		min-width: 800px;
 		max-width: 100vw;
+		margin-left: 38%;
 
 		@include respond-to('small')
 		{
@@ -77,7 +82,7 @@
 
 		&:first-of-type
 		{
-			margin-left: 1rem;
+			margin-left: 3.5rem;
 			margin-right: 1.5rem;
 
 			@include respond-to('small')
@@ -120,7 +125,7 @@
 	.header-box:first-of-type
 	{
 		background-color: $orange;
-		width: 340px;
+		flex-grow: 1;
 
 		@include respond-to('small')
 		{
@@ -131,6 +136,6 @@
 	.header-box:last-of-type
 	{
 		background-color: $white;
-		flex-grow: 2.5;
+		flex-grow: 1;
 	}
 }
