--- a/templates/modular.html.twig
+++ b/templates/modular.html.twig
@@ -39,11 +39,11 @@
                 </li>
             {% endif %}
         {% endfor %}
-        <li class="blog" id="blog">
+{#         <li class="blog" id="blog">
             <a href="/blog" target="new">
                 Blog
             </a>
-        </li>
+        </li> #}
         {% for mitem in site.menu %}
             <li>
                 <a href="{{ mitem.url }}">
